# tcMenuLib

./: .gitignore  README.md  doxygen.conf  keywords.txt  library.json  library.properties  platformio-test.ini  platformio.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: platformio.yml
cmake/: CMakeLists.txt
examples/analogDfRobot/: README.md  analogDfRobot.emf  analogDfRobot.ino  analogDfRobot.ino.backup  analogDfRobot_menu.cpp  analogDfRobot_menu.h  tcMenuLiquidCrystal.cpp  tcMenuLiquidCrystal.h
examples/colorTftEthernet32/: EthernetTransport.h  (+10 more)
generator/: platformio_generator.py
src/: BaseDialog.cpp  BaseDialog.h  BaseGraphicalRenderer.cpp  BaseGraphicalRenderer.h  BaseGraphicalRendererTypes.h  BaseRenderers.cpp  BaseRenderers.h  EditableLargeNumberMenuItem.cpp  EditableLargeNumberMenuItem.h  EepromItemStorage.cpp  EepromItemStorage.h  GfxMenuConfig.cpp  GfxMenuConfig.h  KeyboardManager.cpp  KeyboardManager.h  MenuHistoryNavigator.cpp  MenuHistoryNavigator.h  MenuItems.cpp  MenuItems.h  MenuIterator.cpp  MenuIterator.h  MenuTouchScreenEncoder.cpp  MenuTouchScreenEncoder.h  MessageProcessors.cpp  MessageProcessors.h  RemoteAuthentication.cpp  RemoteAuthentication.h  RemoteConnector.cpp  RemoteConnector.h  RemoteMenuItem.cpp  RemoteMenuItem.h  RemoteTypes.h  RuntimeMenuItem.cpp  RuntimeMenuItem.h  ScrollChoiceMenuItem.cpp  ScrollChoiceMenuItem.h  SecuredMenuPopup.cpp  SecuredMenuPopup.h  TcMenuBuilder.cpp  TcMenuBuilder.h  (+7 more)
test/: CoreMenuItemTests.cpp  CoreRendererTests.cpp  DateTimeItemTestCases.cpp  LargeNumberItemTests.cpp  RuntimeItemTestCases.cpp  ScrollChoiceMenuItemTests.cpp  ValueItemTestCases.cpp  authenticationTests.cpp  fixtures_extern.h  menuManagerTests.cpp  menuNavigatorTests.cpp  tcMenuCoreTests.cpp  tcMenuFixtures.h  test_main.cpp
(+571 files in other folders)
